// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default ⓪ ~ ㊿ 1`] = `
Array [
  "⓪",
  "①",
  "②",
  "③",
  "④",
  "⑤",
  "⑥",
  "⑦",
  "⑧",
  "⑨",
  "⑩",
  "⑪",
  "⑫",
  "⑬",
  "⑭",
  "⑮",
  "⑯",
  "⑰",
  "⑱",
  "⑲",
  "⑳",
  "㉑",
  "㉒",
  "㉓",
  "㉔",
  "㉕",
  "㉖",
  "㉗",
  "㉘",
  "㉙",
  "㉚",
  "㉛",
  "㉜",
  "㉝",
  "㉞",
  "㉟",
  "㊱",
  "㊲",
  "㊳",
  "㊴",
  "㊵",
  "㊶",
  "㊷",
  "㊸",
  "㊹",
  "㊺",
  "㊻",
  "㊼",
  "㊽",
  "㊾",
  "㊿",
]
`;

exports[`default 一 ~ 十 1`] = `
Array [
  "一",
  "二",
  "三",
  "四",
  "五",
  "六",
  "七",
  "八",
  "九",
  "十",
]
`;

exports[`default 三 ~ 五 createRegExpClass 1`] = `"三四五"`;

exports[`default 二 ~ 七 1`] = `
Array [
  "二",
  "三",
  "四",
  "五",
  "六",
  "七",
]
`;

exports[`default 二 ~ 七 createRegExpClass 1`] = `"[二三四五六七]"`;

exports[`default 二 ~ 七 createRegExpString 1`] = `"二三四五六七"`;

exports[`default 壹 ~ 什 1`] = `"壹貳參肆伍陸柒捌玖什贰叁陆"`;

exports[`default 壹 ~ 什 createRegExpClass findFirstOne 1`] = `"壹貳參肆伍陸柒捌玖什"`;

exports[`default 零 ~ 拾 1`] = `
Array [
  "零",
  "壱",
  "弐",
  "参",
  "肆",
  "伍",
  "陸",
  "柒",
  "捌",
  "玖",
  "拾",
  "壹",
  "貳",
  "參",
  "贰",
  "叁",
  "陆",
]
`;
